--- a/notebooks/Concatenation.ipynb
+++ b/notebooks/Concatenation.ipynb
@@ -1152,27 +1152,74 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9f35dee6-fd11-4ed2-9ba2-9863a416ca5f",
+   "metadata": {},
+   "source": [
+    "## From processed data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
+   "id": "90166059-1cba-448c-a0d1-1f52bf3e6bff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b8cc282b-36eb-4a23-9e24-2b7211a8e844",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(os.path.join(os.environ['CAI_DATA_BASE_PATH'], \"processed_datasets/84000-parallel-sentences-raw-no-dict/train.en\")) as f:\n",
+    "    sample_texts = f.readlines()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "2c30a044-d2b1-4fc5-8c35-1bee3a74bfb7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_texts = [t.replace('\\n', '') for t in sample_texts]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c36e3e78-a274-40ea-965d-6d4f490aeb25",
+   "metadata": {},
+   "source": [
+    "## Show some examples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "4d4323a0-2ecc-4747-aa85-38ed47325f97",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['The Noble Great Vehicle Sūtra\\nThe Questions of Guṇaratnasaṅkusumita',\n",
-       " 'Homage to all buddhas and bodhisattvas.',\n",
-       " 'Thus did I hear at one time.',\n",
-       " 'The Blessed One was residing at Vulture Peak Mountain in Rājagṛha together with a great assembly of one thousand two hundred fifty monks and many thousands of bodhisattvas.',\n",
-       " 'Included in the assembly at that time was a bodhisattva great being, a Licchavi prince from the city of Vaiśālī named Guṇaratnasaṅkusumita.',\n",
-       " 'The bodhisattva great being Guṇaratnasaṅkusumita rose from his seat, draped his upper robe over one shoulder, and',\n",
-       " 'knelt with his right knee on the ground.',\n",
-       " 'With joined palms, he bowed toward the Blessed One and inquired,',\n",
-       " '“If the Blessed One would grant me the opportunity to request instruction, I would like to ask a question of the honored, blessed, thus-gone, worthy, perfect Buddha.”',\n",
-       " 'The Blessed One replied to the bodhisattva great being Guṇaratnasaṅkusumita,']"
+       "['blessed one, this is how we train with our armor in the world.',\n",
+       " 'are both explained by the wise',\n",
+       " 'act like stairs and bridges.',\n",
+       " 'pausing on the seventh step,',\n",
+       " 'monks, virtuous acts must be engaged in with respect,',\n",
+       " 'he whose consciousness pursues signs is not interested in the dharma but is interested in signs.',\n",
+       " 'royal master of fragrances will be foremost in terms of miraculous abilities.',\n",
+       " 'moreover, ananda, you have revered me with benevolent actions of body, benevolent actions of speech, and benevolent actions of mind.',\n",
+       " 'monk, for these reasons, these phenomena are exactly as i have taught.',\n",
+       " 'when he had said this,']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1199,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "4207da87-7428-47d2-a67f-58502e3c0454",
    "metadata": {},
    "outputs": [],
@@ -1209,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "30c881aa-b56a-4115-aa99-bc33b9b32824",
    "metadata": {},
    "outputs": [],
@@ -1220,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "39e33d10-9c5f-4ff1-9643-fb2ebdc85720",
    "metadata": {},
    "outputs": [
@@ -1243,7 +1290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "9bce9560-928d-410d-8422-92f07e977a29",
    "metadata": {},
    "outputs": [
@@ -1253,7 +1300,7 @@
        "{'ENTAILMENT': 0, 'NEUTRAL': 1, 'CONTRADICTION': 2}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1302,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "id": "fc20fbcb-b008-4211-a192-9338a267b881",
    "metadata": {},
    "outputs": [],
@@ -1317,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 14,
    "id": "3d2d751d-2bea-41b6-8a82-b77aedefa221",
    "metadata": {},
    "outputs": [],
@@ -1368,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 36,
    "id": "1117b192-ffd6-4dbc-a047-833dc378da11",
    "metadata": {},
    "outputs": [
@@ -1377,57 +1424,57 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "    \"sequence\": \"\\u201cThose who seek unimpeded wisdom, Who are without attachment,\",\n",
+      "    \"sequence\": \"when one is seized by a throat obstruction, one should incant some clay from an anthill and apply it as a plaster. the disease will depart.\",\n",
       "    \"entailment\": {\n",
       "        \"labels\": [\n",
-      "            \"Insight Crown will be his attendant.\",\n",
-      "            \"This family must be creative and thereby enjoy worldly pleasures.\",\n",
-      "            \"\\u201cHe is the one who is bound with a stainless headband of liberation, great wisdom, and nonattachment.\",\n",
-      "            \"If they become famous due to such causes, conditions, and bases, or if others praise or glorify them, bodhisattvas do not become bloated, proud, or conceited.\",\n",
-      "            \"Whom, having already produced roots of virtue, shall I lead to ripen their roots of virtue?\",\n",
-      "            \"\\u201c\\u0100nanda, the entire merit of the hearers and solitary buddhas that transcends the world is not vast, it has a lesser purpose, and it is eventually exhausted.\",\n",
-      "            \"They might be able to end up at the summit of existence, but they still will be left with afflictions.\",\n",
-      "            \"Joining his palms, he bowed toward the thus-gone Master of the Three Realms.\",\n",
-      "            \"Therefore, he will enjoy this temple with its sandalwood courtyard.\",\n",
-      "            \"and the Buddha prophesied that in the future all would be reborn in the universe Abhirati.\"\n",
+      "            \"the remedy for sentient beings involved in desire toward textures is the idea of suffering.\",\n",
+      "            \"when the noble eightfold path has been cut and the medicine of all the vidya mantras that are like precious gems is lost. when the world spheres have gone dark, devoid of good people -\",\n",
+      "            \"noble son, is that blessed one free from harm, is he strong, and does he remain unchanged?\",\n",
+      "            \"as being from the good family.\",\n",
+      "            \"these naksatra queens, with retinues of many hundreds of thousands of naksatras, gathered together in this great assembly in the realm of the pure abode through the blessing of the buddha and took their seats.\",\n",
+      "            \"the pavilion was anointed with rare and precious sandalwood.\",\n",
+      "            \"so, sudbhuti, it is because all things are empty of inherent existence\",\n",
+      "            \"and upon his arrival he touched his head to the blessed ones feet and asked him,\",\n",
+      "            \"great king, said the bhagavan, these two boys have made offerings to as many tathagatas, arhats, perfectly enlightened buddhas as there are grains of sand in sixty-five ganges rivers.\",\n",
+      "            \"his family will be ksatriya, and his light will extend thirty-one leagues.\"\n",
       "        ],\n",
       "        \"scores\": [\n",
-      "            0.6599832773208618,\n",
-      "            0.09245485067367554,\n",
-      "            0.05990946665406227,\n",
-      "            0.056909505277872086,\n",
-      "            0.04740629345178604,\n",
-      "            0.030678387731313705,\n",
-      "            0.017069879919290543,\n",
-      "            0.014608184807002544,\n",
-      "            0.014250398613512516,\n",
-      "            0.006729702930897474\n",
+      "            0.9973231554031372,\n",
+      "            0.0007152764592319727,\n",
+      "            0.0007129371515475214,\n",
+      "            0.00030258757760748267,\n",
+      "            0.000250546756433323,\n",
+      "            0.00022504244407173246,\n",
+      "            0.00014939528773538768,\n",
+      "            0.00012297109060455114,\n",
+      "            0.00010447211388964206,\n",
+      "            9.356249938718975e-05\n",
       "        ]\n",
       "    },\n",
       "    \"contradiction\": {\n",
       "        \"labels\": [\n",
-      "            \"\\u201cHe is the one who is bound with a stainless headband of liberation, great wisdom, and nonattachment.\",\n",
-      "            \"If they become famous due to such causes, conditions, and bases, or if others praise or glorify them, bodhisattvas do not become bloated, proud, or conceited.\",\n",
-      "            \"and the Buddha prophesied that in the future all would be reborn in the universe Abhirati.\",\n",
-      "            \"Whom, having already produced roots of virtue, shall I lead to ripen their roots of virtue?\",\n",
-      "            \"Joining his palms, he bowed toward the thus-gone Master of the Three Realms.\",\n",
-      "            \"\\u201c\\u0100nanda, the entire merit of the hearers and solitary buddhas that transcends the world is not vast, it has a lesser purpose, and it is eventually exhausted.\",\n",
-      "            \"They might be able to end up at the summit of existence, but they still will be left with afflictions.\",\n",
-      "            \"Therefore, he will enjoy this temple with its sandalwood courtyard.\",\n",
-      "            \"Insight Crown will be his attendant.\",\n",
-      "            \"This family must be creative and thereby enjoy worldly pleasures.\"\n",
+      "            \"the pavilion was anointed with rare and precious sandalwood.\",\n",
+      "            \"and upon his arrival he touched his head to the blessed ones feet and asked him,\",\n",
+      "            \"great king, said the bhagavan, these two boys have made offerings to as many tathagatas, arhats, perfectly enlightened buddhas as there are grains of sand in sixty-five ganges rivers.\",\n",
+      "            \"as being from the good family.\",\n",
+      "            \"his family will be ksatriya, and his light will extend thirty-one leagues.\",\n",
+      "            \"when the noble eightfold path has been cut and the medicine of all the vidya mantras that are like precious gems is lost. when the world spheres have gone dark, devoid of good people -\",\n",
+      "            \"noble son, is that blessed one free from harm, is he strong, and does he remain unchanged?\",\n",
+      "            \"so, sudbhuti, it is because all things are empty of inherent existence\",\n",
+      "            \"these naksatra queens, with retinues of many hundreds of thousands of naksatras, gathered together in this great assembly in the realm of the pure abode through the blessing of the buddha and took their seats.\",\n",
+      "            \"the remedy for sentient beings involved in desire toward textures is the idea of suffering.\"\n",
       "        ],\n",
       "        \"scores\": [\n",
-      "            0.9068933725357056,\n",
-      "            0.06899741291999817,\n",
-      "            0.01004960760474205,\n",
-      "            0.0033434866927564144,\n",
-      "            0.003070361213758588,\n",
-      "            0.0017069607274606824,\n",
-      "            0.0016414261190220714,\n",
-      "            0.0016017818124964833,\n",
-      "            0.0014356336323544383,\n",
-      "            0.001260007149539888\n",
+      "            0.37245339155197144,\n",
+      "            0.25100260972976685,\n",
+      "            0.20259645581245422,\n",
+      "            0.10472045838832855,\n",
+      "            0.028757214546203613,\n",
+      "            0.024340182542800903,\n",
+      "            0.008568818680942059,\n",
+      "            0.007305941078811884,\n",
+      "            0.00024702001246623695,\n",
+      "            7.895883754827082e-06\n",
       "        ]\n",
       "    }\n",
       "}\n"
