First cut of MNLI-based shuffling

--- a/notebooks/Concatenation.ipynb
+++ b/notebooks/Concatenation.ipynb
@@ -1415,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 42,
    "id": "1117b192-ffd6-4dbc-a047-833dc378da11",
    "metadata": {},
    "outputs": [
@@ -1424,57 +1424,57 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "    \"sequence\": \"when one is seized by a throat obstruction, one should incant some clay from an anthill and apply it as a plaster. the disease will depart.\",\n",
+      "    \"sequence\": \"cultivates their roots of virtue.\",\n",
       "    \"entailment\": {\n",
       "        \"labels\": [\n",
-      "            \"the remedy for sentient beings involved in desire toward textures is the idea of suffering.\",\n",
-      "            \"when the noble eightfold path has been cut and the medicine of all the vidya mantras that are like precious gems is lost. when the world spheres have gone dark, devoid of good people -\",\n",
-      "            \"noble son, is that blessed one free from harm, is he strong, and does he remain unchanged?\",\n",
-      "            \"as being from the good family.\",\n",
-      "            \"these naksatra queens, with retinues of many hundreds of thousands of naksatras, gathered together in this great assembly in the realm of the pure abode through the blessing of the buddha and took their seats.\",\n",
-      "            \"the pavilion was anointed with rare and precious sandalwood.\",\n",
-      "            \"so, sudbhuti, it is because all things are empty of inherent existence\",\n",
-      "            \"and upon his arrival he touched his head to the blessed ones feet and asked him,\",\n",
-      "            \"great king, said the bhagavan, these two boys have made offerings to as many tathagatas, arhats, perfectly enlightened buddhas as there are grains of sand in sixty-five ganges rivers.\",\n",
-      "            \"his family will be ksatriya, and his light will extend thirty-one leagues.\"\n",
+      "            \"and in the same vein, , up to and including the eighty minor marks, are non-apprehensible. abiding in the emptiness of inherent existence, with regard to which this same refrain extensively applies,\",\n",
+      "            \"through this he settled into the second meditative concentration, which is free of thought and analysis and is imbued with the joy and pleasure born of meditative absorption.\",\n",
+      "            \"on this point the bhagavan\",\n",
+      "            \"evil is not produced and good is not destroyed.\",\n",
+      "            \"through the blessed one he realized the dharma.\",\n",
+      "            \"the relics of the jina are beautified by the clear sound of bells, the beauty of silken streamers, and bells shaken by the breeze.\",\n",
+      "            \"they will have sharp faculties in the jinas teachings\",\n",
+      "            \"the full extent of the temple-palace represents the buddhas abode.\",\n",
+      "            \"an act to defeat bodhisattvas may be stopped, subdued, or confined to a separate location by various means.\",\n",
+      "            \"before he attained omniscience, light rays called summoners of mara issued forth from his body.\"\n",
       "        ],\n",
       "        \"scores\": [\n",
-      "            0.9973231554031372,\n",
-      "            0.0007152764592319727,\n",
-      "            0.0007129371515475214,\n",
-      "            0.00030258757760748267,\n",
-      "            0.000250546756433323,\n",
-      "            0.00022504244407173246,\n",
-      "            0.00014939528773538768,\n",
-      "            0.00012297109060455114,\n",
-      "            0.00010447211388964206,\n",
-      "            9.356249938718975e-05\n",
+      "            0.27089768648147583,\n",
+      "            0.16195319592952728,\n",
+      "            0.14783523976802826,\n",
+      "            0.12178810685873032,\n",
+      "            0.10687320679426193,\n",
+      "            0.04728616774082184,\n",
+      "            0.04676396772265434,\n",
+      "            0.04078206792473793,\n",
+      "            0.039692994207143784,\n",
+      "            0.01612740382552147\n",
       "        ]\n",
       "    },\n",
       "    \"contradiction\": {\n",
       "        \"labels\": [\n",
-      "            \"the pavilion was anointed with rare and precious sandalwood.\",\n",
-      "            \"and upon his arrival he touched his head to the blessed ones feet and asked him,\",\n",
-      "            \"great king, said the bhagavan, these two boys have made offerings to as many tathagatas, arhats, perfectly enlightened buddhas as there are grains of sand in sixty-five ganges rivers.\",\n",
-      "            \"as being from the good family.\",\n",
-      "            \"his family will be ksatriya, and his light will extend thirty-one leagues.\",\n",
-      "            \"when the noble eightfold path has been cut and the medicine of all the vidya mantras that are like precious gems is lost. when the world spheres have gone dark, devoid of good people -\",\n",
-      "            \"noble son, is that blessed one free from harm, is he strong, and does he remain unchanged?\",\n",
-      "            \"so, sudbhuti, it is because all things are empty of inherent existence\",\n",
-      "            \"these naksatra queens, with retinues of many hundreds of thousands of naksatras, gathered together in this great assembly in the realm of the pure abode through the blessing of the buddha and took their seats.\",\n",
-      "            \"the remedy for sentient beings involved in desire toward textures is the idea of suffering.\"\n",
+      "            \"evil is not produced and good is not destroyed.\",\n",
+      "            \"and in the same vein, , up to and including the eighty minor marks, are non-apprehensible. abiding in the emptiness of inherent existence, with regard to which this same refrain extensively applies,\",\n",
+      "            \"before he attained omniscience, light rays called summoners of mara issued forth from his body.\",\n",
+      "            \"an act to defeat bodhisattvas may be stopped, subdued, or confined to a separate location by various means.\",\n",
+      "            \"on this point the bhagavan\",\n",
+      "            \"the full extent of the temple-palace represents the buddhas abode.\",\n",
+      "            \"the relics of the jina are beautified by the clear sound of bells, the beauty of silken streamers, and bells shaken by the breeze.\",\n",
+      "            \"they will have sharp faculties in the jinas teachings\",\n",
+      "            \"through this he settled into the second meditative concentration, which is free of thought and analysis and is imbued with the joy and pleasure born of meditative absorption.\",\n",
+      "            \"through the blessed one he realized the dharma.\"\n",
       "        ],\n",
       "        \"scores\": [\n",
-      "            0.37245339155197144,\n",
-      "            0.25100260972976685,\n",
-      "            0.20259645581245422,\n",
-      "            0.10472045838832855,\n",
-      "            0.028757214546203613,\n",
-      "            0.024340182542800903,\n",
-      "            0.008568818680942059,\n",
-      "            0.007305941078811884,\n",
-      "            0.00024702001246623695,\n",
-      "            7.895883754827082e-06\n",
+      "            0.4636400043964386,\n",
+      "            0.3268604874610901,\n",
+      "            0.0907244011759758,\n",
+      "            0.035789940506219864,\n",
+      "            0.02066144533455372,\n",
+      "            0.018886063247919083,\n",
+      "            0.01620723493397236,\n",
+      "            0.011720363050699234,\n",
+      "            0.008232762105762959,\n",
+      "            0.0072772568091750145\n",
       "        ]\n",
       "    }\n",
       "}\n"
@@ -1486,6 +1486,27 @@
     "candidate_sents = random.choices(sample_texts, k=10)\n",
     "score_dict = run_scores(base_sent, candidate_sents, zsc)\n",
     "print(json.dumps(score_dict, indent=4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "d5c94eac-171b-4847-b64f-9fad29663f07",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1.000000037252903, 0.9999999590218067)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(score_dict[\"entailment\"][\"scores\"]), sum(score_dict[\"contradiction\"][\"scores\"])"
    ]
   },
   {
