NLLB encoder exploration notebook

--- a/notebooks/NLLB.ipynb
+++ b/notebooks/NLLB.ipynb
@@ -910,6 +910,132 @@
    "source": [
     "1 - unk_counts[unk_counts > 1].sum() / unk_counts.sum()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e430f7e7-4231-420a-b20e-e11c87c8878b",
+   "metadata": {},
+   "source": [
+    "## Tibetan vocabulary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f352c483-a4a2-4bcb-b7d6-dd6c0f9f8ecf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import unicodedata\n",
+    "\n",
+    "from transformers import AutoTokenizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "5ab3bd9a-0e83-4eb0-b995-3c7484f0c64f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer = AutoTokenizer.from_pretrained(\"facebook/nllb-200-distilled-600M\", src_lang=\"bod_Tibt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "da9c4c47-df59-44b1-99d4-e22c13c739d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'▁indflydelse'"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(tokenizer.vocab.keys())[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "de36c555-294f-4ccf-af68-729915f92a2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _is_tibetan(word):\n",
+    "    excluded = {\"▁\", \"\", \"\", \"\", \"\", \"\", \"\", \"\", \"\", \"\", \"\", \"\", \"\", \"\", \"\", \"\", \"\", \"\", \"\", \"\", \"\", \"\", \"\", \"\", \"\", \"\", \"\", \"\", \"฀\", \"",
+    "\", \"\", \"\"}\n",
+    "    return all(['TIBETAN' in unicodedata.name(c) for c in word if not c in excluded])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "91e0d6ce-ee89-4a1e-8c5e-a5ddf7746d63",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tibetan = [_is_tibetan(w) for w in list(tokenizer.vocab.keys())]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "7d3ae797-e7a8-4f06-bfca-17a3f5677322",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2951"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(tibetan)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "f330295c-0c4e-4b8d-ad62-460c30ba941f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_str = \"།མུ་སྟེགས་ཚོགས་རྣམས་ཐམས་ཅད་རབ་བཅོམ་སྟེ།\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "7efc058c-38c3-4de2-bd1b-cf98368927fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'།མུ་སྟེགས་ཚོགས་རྣམས་ཐམས་ཅད་རབ་བཅོམ་སྟེ།</s>bod_Tibt'"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer.decode(tokenizer.encode(test_str))"
+   ]
   }
  ],
  "metadata": {
