Some NLLB graphs in notebook

--- a/notebooks/NLLB.ipynb
+++ b/notebooks/NLLB.ipynb
@@ -1039,6 +1039,200 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e6ebad83-a130-4b19-9d2c-5328d7a2521e",
+   "metadata": {},
+   "source": [
+    "# Basic dataset statistics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "20b888a7-831a-4c60-ae28-ced87aea2848",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import islice\n",
+    "from datasets import load_dataset\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "f09f66cf-6aa3-4122-b70e-cca744364e14",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2e8116c73dc7461fbcc051e3ae6a043e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading builder script:   0%|          | 0.00/9.49k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "87018e522ad64263816cee65cb05729f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading metadata:   0%|          | 0.00/5.05M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a02a6ecd077448729abd0acdba4d16fe",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading readme:   0%|          | 0.00/38.6k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "aa25b2343201436ca355cbc202ea160a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading extra modules:   0%|          | 0.00/81.9k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading and preparing dataset nllb/bod_Tibt-eng_Latn (download: 124.61 MiB, generated: 393.61 MiB, post-processed: Unknown size, total: 518.23 MiB) to /home/eeisenst/.cache/huggingface/datasets/allenai___nllb/bod_Tibt-eng_Latn/1.0.0/28d4a24ef4e17a539baee89254dc6a56e75b1a7a10b1055757f2512af99f5b30...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "01702a1f092c49f49926ee88a19fd000",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data:   0%|          | 0.00/131M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating train split:   0%|          | 0/714577 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset nllb downloaded and prepared to /home/eeisenst/.cache/huggingface/datasets/allenai___nllb/bod_Tibt-eng_Latn/1.0.0/28d4a24ef4e17a539baee89254dc6a56e75b1a7a10b1055757f2512af99f5b30. Subsequent calls will reuse this data.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "89b87b68b4ff4974b088dc82b50a28cf",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "nllb_data = load_dataset(\"allenai/nllb\", 'bod_Tibt-eng_Latn')['train']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6f663298-f84e-4275-9d85-28972116d978",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nllb_data = pd.DataFrame(nllb_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "3b2c1167-583f-4aac-8cff-64c7a039562a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nllb_data['eng_len'] = nllb_data.apply(lambda x: len(x['translation']['eng_Latn']), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "3b43b831-1f5d-4402-b8df-dff33c2f0556",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    714577.000000\n",
+       "mean         43.715713\n",
+       "std          37.405826\n",
+       "min           7.000000\n",
+       "25%          23.000000\n",
+       "50%          32.000000\n",
+       "75%          49.000000\n",
+       "max         499.000000\n",
+       "Name: eng_len, dtype: float64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nllb_data.eng_len.describe()#percentiles=np.arange(0., 1., 0.1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a728984f-0f3b-4bc4-800b-2d492b292e02",
    "metadata": {},
    "source": [
@@ -1296,7 +1490,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
