Bitext template generation notebook update

--- a/notebooks/Bitext template mining.ipynb
+++ b/notebooks/Bitext template mining.ipynb
@@ -1883,40 +1883,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 71,
    "id": "b249168d-e35a-4dcd-a075-457b4d079467",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[' string', ' strings', ' stringing', ' stringed']"
+       "[' fraction', ' fractions', ' fractioning', ' fractioned']"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "word = \" string\"\n",
+    "word = \" fraction\"\n",
     "lexemes = lexeme(word)\n",
     "lexemes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 72,
    "id": "e93c93c0-d874-4cb5-ab26-0c672744492c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([[6755], [22052], [6755, 154], [6755, 196]], 2)"
+       "([[13484], [44807], [13484, 154], [13484, 196]], 2)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1928,7 +1928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 73,
    "id": "e7653126-1cf3-408b-bcda-56f12c6b0764",
    "metadata": {},
    "outputs": [
@@ -1936,23 +1936,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[46.690738677978516]\n",
+      "[42.83558654785156]\n",
       "\n",
-      "[48.381736755371094]\n",
+      "[47.377281188964844]\n",
       "\n",
-      "[46.690738677978516, 53.404937744140625]\n",
+      "[42.83558654785156, 53.404937744140625]\n",
       "\n",
-      "[46.690738677978516, 52.885501861572266]\n",
+      "[42.83558654785156, 52.885501861572266]\n",
       "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(array([46.69073868, 48.38173676, 50.04783821, 49.78812027]), ' stringing')"
+       "(array([42.83558655, 47.37728119, 48.12026215, 47.8605442 ]), ' fractioning')"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2005,6 +2005,112 @@
    ],
    "source": [
     "pd.Series(logits.flatten()).hist(bins=50)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97a4d321-4bc8-4a00-be91-9001ac98c185",
+   "metadata": {},
+   "source": [
+    "# Captum experiments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "76558a8a-0325-4752-8c25-b9f2d8a5c85e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The tokenizer class you load from this checkpoint is not the same type as the class this function is called from. It may result in unexpected tokenization. \n",
+      "The tokenizer class you load from this checkpoint is 'NllbTokenizer'. \n",
+      "The class this function is called from is 'CAINllbTokenizerFast'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "from cai_garland.utils.translator import Translator\n",
+    "\n",
+    "translator = Translator(\"olive-cormorant-nllb/base-600M\")\n",
+    "\n",
+    "translator.num_beams = 50\n",
+    "translator.decoding_length = 200"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "01abdf90-1b46-488d-b0ff-6d73eac25042",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "source, target = \"ནད་ཐམས་ཅད་སོས་པར་གྱུར་ཏེ།\", \"he will cure all \""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "652c716f-fae2-4daf-b6f3-4aff148d8ec6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/eeisenst/miniconda3/envs/cai-base/lib/python3.10/site-packages/transformers/tokenization_utils_base.py:3546: UserWarning: `as_target_tokenizer` is deprecated and will be removed in v5 of Transformers. You can tokenize your labels by using the argument `text_target` of the regular `__call__` method (either in the same call as your input texts if you use the same keyword arguments, or in a separate call.\n",
+      "  warnings.warn(\n",
+      "/home/eeisenst/workspace/compassionai/garland/src/cai_garland/models/cai_nllb_tokenizer.py:106: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  attention_mask = torch.tensor(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'input_ids': tensor([[   2,  848, 2220, 4546, 4657, 9907, 9885, 9955,    3]]), 'token_type_ids': tensor([[0, 0, 0, 0, 0, 0, 0, 0, 0]]), 'attention_mask': tensor([[1, 1, 1, 1, 1, 1, 1, 1, 1]]), 'decoder_input_ids': tensor([[90590, 90590,   374,  1808, 50829,   962, 90555]]), 'decoder_attention_mask': tensor([[1, 1, 1, 1, 1, 1, 1]])}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inputs = translator.tokenizer(source, return_tensors=\"pt\")\n",
+    "\n",
+    "with translator.tokenizer.as_target_tokenizer():\n",
+    "    _ = translator.tokenizer(target, return_tensors=\"pt\")\n",
+    "    inputs['decoder_input_ids'] = _['input_ids'][:,:-1]\n",
+    "    inputs['decoder_attention_mask'] = _['attention_mask'][:,:-1]\n",
+    "    del _\n",
+    "\n",
+    "inputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "208a388b-1b7d-4d52-9f07-c300f75f02af",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([90592])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with torch.no_grad():\n",
+    "    logits = translator.model(**inputs).logits[0][-1]\n",
+    "logits.shape"
    ]
   }
  ],
