--- a/notebooks/Bitext template mining.ipynb
+++ b/notebooks/Bitext template mining.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 60,
    "id": "c17b1142-ede6-4f3b-8e3b-a5c7a5373e5d",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 61,
    "id": "956f6072-ec30-41c0-a93c-d11e2bce866c",
    "metadata": {},
    "outputs": [],
@@ -28,14 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 62,
    "id": "744ef373-a926-484a-97b2-0ada2668972c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "67005217376d4ffd8e1c820b17c85290",
+       "model_id": "b6c44d3810604156a172623f781895e1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 63,
    "id": "1e114e59-5fec-4086-aa7a-765ca5730d08",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
        "1038341"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,14 +77,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 64,
    "id": "5890c5d1-c0b4-4ef8-bde3-9aa038266e78",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3fc75129cf74b04b13dcecc559d93d3",
+       "model_id": "2d1dc65f46aa449eadbe6e39b45f181d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -101,7 +101,7 @@
        "910364"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1117,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 66,
    "id": "7372a86f-7194-4044-9fbe-347f995def40",
    "metadata": {},
    "outputs": [],
@@ -1182,7 +1182,7 @@
     "    target_words = target.split(' ')\n",
     "    viz_records = []\n",
     "    for w_idx, word in tqdm(enumerate(target_words), total=len(target_words)):\n",
-    "        cur_target = ' '.join(target_words[:w_idx])\n",
+    "        cur_target = ' '.join(target_words[:w_idx + 1])\n",
     "        inputs, label, attribs, delta = lig_attribs(source, cur_target, word, translator)\n",
     "        if inputs is None:\n",
     "            continue\n",
@@ -1192,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 72,
    "id": "3913915c-845a-4b23-b996-372d8b255710",
    "metadata": {},
    "outputs": [
@@ -1200,15 +1200,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0-[CLS] 1-▁ནད་ 2-ཐམས་ཅད་ 3-སོས་ 4-པར་གྱུར་ 5-ཏ 6-ེ 7-། 8-[SEP]\n",
-      "he will cure all diseases\n"
+      "0-[CLS] 1-▁ 2-། 3-འཁྲུལ་འཁོར་ 4-ཐམས་ཅད་ 5-འགེམས་ 6-པར་བྱེད་ 7-ད 8-ོ 9-། 10-[SEP]\n",
+      "one will burn all the diagrams.\n"
      ]
     }
    ],
    "source": [
-    "source, target = \"ནད་ཐམས་ཅད་སོས་པར་གྱུར་ཏེ།\", \"he will cure all diseases\"\n",
+    "# source, target = \"ནད་ཐམས་ཅད་སོས་པར་གྱུར་ཏེ།\", \"he will cure all diseases\"\n",
     "# source, target = '།སྐྱེ་བོ་ཐམས་ཅད་དགའ་བར་འགྱུར་རོ།', 'one will be loved by everyone.'\n",
-    "# source, target = '།འཁྲུལ་འཁོར་ཐམས་ཅད་འགེམས་པར་བྱེད་དོ།', 'one will burn all the diagrams.'\n",
+    "source, target = '།འཁྲུལ་འཁོར་ཐམས་ཅད་འགེམས་པར་བྱེད་དོ།', 'one will burn all the diagrams.'\n",
     "\n",
     "print(\n",
     "    ' '.join([\n",
@@ -1220,19 +1220,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "cb5f3029-7f36-4784-8d0e-5805aa35c2ff",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3b34d9145134064ba89cbe9b3fed977",
+       "model_id": "445df0a434184b1fafbb0ba1b2c31ea7",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/5 [00:00<?, ?it/s]"
+       "  0%|          | 0/6 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -1242,24 +1242,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   0.000   -0.146   -0.210   -0.064    0.236   -0.250   -0.144   -0.207    0.000\n",
-      "   0.000   -0.042   -0.073   -0.257    0.197   -0.099   -0.036   -0.083    0.000\n",
-      "   0.000   -0.096   -0.118    0.042    0.134   -0.037   -0.055    0.137    0.000\n",
-      "   0.000   -0.132   -0.073   -0.134    0.160   -0.168   -0.051   -0.138    0.000\n",
-      "   0.000   -0.064   -0.210   -0.076    0.112   -0.175   -0.020   -0.089    0.000\n"
+      "   0.000   -0.215   -0.123    0.379    0.090   -0.378   -0.049   -0.303   -0.189   -0.081    0.000\n",
+      "   0.000   -0.311   -0.069    0.149    0.083   -0.245   -0.071   -0.248   -0.181   -0.041    0.000\n",
+      "   0.000   -0.356   -0.098    0.211    0.064   -0.160   -0.091   -0.186   -0.177    0.102    0.000\n",
+      "   0.000   -0.309   -0.106    0.181    0.124   -0.196   -0.071   -0.200   -0.164    0.085    0.000\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table width: 100%><div style=\"border-top: 1px solid; margin-top: 5px;             padding-top: 5px; display: inline-block\"><b>Legend: </b><span style=\"display: inline-block; width: 10px; height: 10px;                 border: 1px solid; background-color:                 hsl(0, 75%, 60%)\"></span> Negative  <span style=\"display: inline-block; width: 10px; height: 10px;                 border: 1px solid; background-color:                 hsl(0, 75%, 100%)\"></span> Neutral  <span style=\"display: inline-block; width: 10px; height: 10px;                 border: 1px solid; background-color:                 hsl(120, 75%, 50%)\"></span> Positive  </div><tr><th>True Label</th><th>Predicted Label</th><th>Attribution Label</th><th>Attribution Score</th><th>Word Importance</th><tr><td><text style=\"padding-right:2em\"><b>he</b></text></td><td><text style=\"padding-right:2em\"><b>-1 (0.50)</b></text></td><td><text style=\"padding-right:2em\"><b>he</b></text></td><td><text style=\"padding-right:2em\"><b>-1.56</b></text></td><td><mark style=\"background-color: hsl(0, 75%, 100%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> [CLS]                    </font></mark><mark style=\"background-color: hsl(0, 75%, 89%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> ▁ནད་                    </font></mark><mark style=\"background-color: hsl(0, 75%, 84%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> ཐམས་ཅད་                    </font></mark><mark style=\"background-color: hsl(0, 75%, 95%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> སོས་                    </font></mark><mark style=\"background-color: hsl(120, 75%, 77%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> པར་གྱུར་                    </font></mark><mark style=\"background-color: hsl(0, 75%, 81%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> ཏ                    </font></mark><mark style=\"background-color: hsl(0, 75%, 89%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> ེ                    </font></mark><mark style=\"background-color: hsl(0, 75%, 84%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> །                    </font></mark><mark style=\"background-color: hsl(0, 75%, 100%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> [SEP]                    </font></mark></td><tr><tr><td><text style=\"padding-right:2em\"><b>will</b></text></td><td><text style=\"padding-right:2em\"><b>-1 (0.50)</b></text></td><td><text style=\"padding-right:2em\"><b>will</b></text></td><td><text style=\"padding-right:2em\"><b>-1.09</b></text></td><td><mark style=\"background-color: hsl(0, 75%, 100%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> [CLS]                    </font></mark><mark style=\"background-color: hsl(0, 75%, 96%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> ▁ནད་                    </font></mark><mark style=\"background-color: hsl(0, 75%, 92%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> ཐམས་ཅད་                    </font></mark><mark style=\"background-color: hsl(0, 75%, 72%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> སོས་                    </font></mark><mark style=\"background-color: hsl(120, 75%, 73%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> པར་གྱུར་                    </font></mark><mark style=\"background-color: hsl(0, 75%, 90%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> ཏ                    </font></mark><mark style=\"background-color: hsl(0, 75%, 96%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> ེ                    </font></mark><mark style=\"background-color: hsl(0, 75%, 91%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> །                    </font></mark><mark style=\"background-color: hsl(0, 75%, 100%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> [SEP]                    </font></mark></td><tr><tr><td><text style=\"padding-right:2em\"><b>cure</b></text></td><td><text style=\"padding-right:2em\"><b>-1 (0.50)</b></text></td><td><text style=\"padding-right:2em\"><b>cure</b></text></td><td><text style=\"padding-right:2em\"><b>0.03</b></text></td><td><mark style=\"background-color: hsl(0, 75%, 100%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> [CLS]                    </font></mark><mark style=\"background-color: hsl(0, 75%, 86%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> ▁ནད་                    </font></mark><mark style=\"background-color: hsl(0, 75%, 82%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> ཐམས་ཅད་                    </font></mark><mark style=\"background-color: hsl(120, 75%, 92%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> སོས་                    </font></mark><mark style=\"background-color: hsl(120, 75%, 74%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> པར་གྱུར་                    </font></mark><mark style=\"background-color: hsl(0, 75%, 95%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> ཏ                    </font></mark><mark style=\"background-color: hsl(0, 75%, 92%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> ེ                    </font></mark><mark style=\"background-color: hsl(120, 75%, 74%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> །                    </font></mark><mark style=\"background-color: hsl(0, 75%, 100%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> [SEP]                    </font></mark></td><tr><tr><td><text style=\"padding-right:2em\"><b>all</b></text></td><td><text style=\"padding-right:2em\"><b>-1 (0.50)</b></text></td><td><text style=\"padding-right:2em\"><b>all</b></text></td><td><text style=\"padding-right:2em\"><b>-1.57</b></text></td><td><mark style=\"background-color: hsl(0, 75%, 100%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> [CLS]                    </font></mark><mark style=\"background-color: hsl(0, 75%, 85%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> ▁ནད་                    </font></mark><mark style=\"background-color: hsl(0, 75%, 92%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> ཐམས་ཅད་                    </font></mark><mark style=\"background-color: hsl(0, 75%, 85%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> སོས་                    </font></mark><mark style=\"background-color: hsl(120, 75%, 77%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> པར་གྱུར་                    </font></mark><mark style=\"background-color: hsl(0, 75%, 81%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> ཏ                    </font></mark><mark style=\"background-color: hsl(0, 75%, 95%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> ེ                    </font></mark><mark style=\"background-color: hsl(0, 75%, 84%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> །                    </font></mark><mark style=\"background-color: hsl(0, 75%, 100%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> [SEP]                    </font></mark></td><tr><tr><td><text style=\"padding-right:2em\"><b>diseases</b></text></td><td><text style=\"padding-right:2em\"><b>-1 (0.50)</b></text></td><td><text style=\"padding-right:2em\"><b>diseases</b></text></td><td><text style=\"padding-right:2em\"><b>-1.60</b></text></td><td><mark style=\"background-color: hsl(0, 75%, 100%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> [CLS]                    </font></mark><mark style=\"background-color: hsl(0, 75%, 93%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> ▁ནད་                    </font></mark><mark style=\"background-color: hsl(0, 75%, 75%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> ཐམས་ཅད་                    </font></mark><mark style=\"background-color: hsl(0, 75%, 91%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> སོས་                    </font></mark><mark style=\"background-color: hsl(120, 75%, 83%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> པར་གྱུར་                    </font></mark><mark style=\"background-color: hsl(0, 75%, 79%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> ཏ                    </font></mark><mark style=\"background-color: hsl(0, 75%, 98%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> ེ                    </font></mark><mark style=\"background-color: hsl(0, 75%, 90%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> །                    </font></mark><mark style=\"background-color: hsl(0, 75%, 100%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> [SEP]                    </font></mark></td><tr></table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1268,51 +1255,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "480164df-7ce2-4b65-8301-6c2ff2ac4d8b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "56e1089afe934fa980c95e53bf9d6bf9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/5 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "སྐྱེ་བོ་\n",
-      "['1) sentient being. 2) person, human being, ordinary men / people / beings, living creature. 3) mankind', 'beings']\n",
-      "for beings,\n",
-      "\n",
-      "ཐམས་ཅད་\n",
-      "['everyone', 'the entire', 'whole, all, everything, everybody', 'everyone']\n",
-      "all of them,\n",
-      "\n",
-      "དགའ་\n",
-      "[\"1) vi. to be glad, happy, pleased. 2) vi. to like, love, take pleasure in, be fond of, be joyous, delighted. 3) vi. to be better, to be more advantageous. 4) adj. comp. of {dga' po}, {las}, {na dga'} would rather, had better. {gang dga' gyis} just let them go!\", 'inflated', \"{mi dga' ba} be offended, upset, displeased\", 'Rati', 'Rati']\n",
-      "nanda,\n",
-      "\n",
-      "བར་འགྱུར་\n",
-      "None\n",
-      "it will change.\n",
-      "\n",
-      "རོ\n",
-      "[\"1) taste, flavor, savor. Syn {lce'i yul}. 2) residue. 3) corpse, dead body. 4) elixir\", '1) taste, flavor, savour', '2) residue', '3) corpse, dead body', '4) 6', '5) elixir', '6) terminitive [after RA]', \"1) taste, flavor, savour = {lce'i yul}\", '2) residue', '3) corpse, dead body', '4) 6', '5) elixir (6) terminitive after RA [Tserig] lce la brten nas ro la dmigs pa,//ro mngar mo,//ro skyur mo,,//mi ro,//rta ro,// = mthar gyur dang, dbugs bral, srog bral phung po', 'six [ro la mngar ba dang, skyur ba, kha ba, bska ba, tsha ba, lan tshva ba bcas drug yod pas grangs drug mtshon]', \"snying po bton zin pa'am bed med du gyur pa'i dngos po,//zas kyi snyigs ro,//khang pa'i gyang ro,//sa ro,//rdo ro,//2.Ra mthar sbyar rgyu slar bsdu'i phrad cig]\"]\n",
-      "tastes,\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "words, tags = by_sent[source]\n",
     "\n",
