First cut of aligner dataset notebook

--- a/notebooks/Aligner.ipynb
+++ b/notebooks/Aligner.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "de980207-16f1-4352-a9d2-acdd48cb5d29",
    "metadata": {},
    "outputs": [],
@@ -12,13 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "93ced5c1-8eaf-49d5-a616-498262c71cfe",
    "metadata": {},
    "outputs": [],
    "source": [
     "! rm -rf /tmp/dask-worker-space\n",
-    "! rm -rf /home/eeisenst/workspace/compassionai/garland/notebooks/dask-worker-space"
+    "! rm -rf ./dask-worker-space"
    ]
   },
   {
@@ -31,17 +31,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "0663730a-8b96-4c5b-9b93-75b32dfb757e",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
+    "import re\n",
     "import copy\n",
     "import spacy\n",
+    "import string\n",
     "import pickle\n",
     "import random\n",
     "import logging\n",
+    "import unicodedata\n",
+    "\n",
+    "import pandas as pd\n",
     "\n",
     "from tqdm.auto import tqdm\n",
     "from cai_common.data import ParallelTMXLoader\n",
@@ -50,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "5d07b288-2c26-4789-852b-93afd8c0cbbe",
    "metadata": {},
    "outputs": [],
@@ -66,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "2e20ebc0-10f6-4182-9604-5f5d3c051a5e",
    "metadata": {},
    "outputs": [
@@ -247,7 +252,7 @@
        "[164496 rows x 6 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "41224943-ca6f-4ded-9bc5-c2aca0db00b6",
    "metadata": {},
    "outputs": [],
@@ -269,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "87ce9938-2448-41e1-a6ee-8195cb680d35",
    "metadata": {},
    "outputs": [],
@@ -324,31 +329,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "1d2bc154-8bf8-41f5-b4c0-4d95eb7fcba1",
    "metadata": {},
    "outputs": [],
    "source": [
     "eligible_pos = {'VERB', 'NOUN', 'ADJ', 'PROPN'}\n",
-    "num_positives = 3000\n",
-    "negative_ratio = 3"
+    "num_positives = 3500\n",
+    "negative_ratio = 3\n",
+    "validation_frac = 0.1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "08338146-c52d-4bfd-a290-38dbb21f7138",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4f00ff56d21e4e639234ce72e3ac7c8a",
+       "model_id": "720cacad9a6342bba265d7dd2f98a779",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/3000 [00:00<?, ?it/s]"
+       "  0%|          | 0/3500 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -356,24 +362,34 @@
     }
    ],
    "source": [
-    "positive_examples = []\n",
+    "positive_records = []\n",
     "\n",
     "records = random.choices(parallel_df.to_dict(orient=\"records\"), k=num_positives)\n",
+    "final_allowed = set(string.ascii_lowercase)\n",
     "\n",
     "for record in tqdm(records):\n",
     "    parsed = nlp(record['english'])\n",
+    "    positive_record = []\n",
     "    for token in filter(lambda token: token.pos_ in eligible_pos, parsed):\n",
-    "        positive_examples.append({\n",
+    "        lemma = \"\".join([c for c in unicodedata.normalize('NFKD', token.lemma_) if not unicodedata.combining(c)]).lower()\n",
+    "        lemma = ''.join([c for c in lemma if c in final_allowed])\n",
+    "        if lemma == '':\n",
+    "            continue\n",
+    "        lemma = re.sub(r'\\s+', ' ', lemma).strip()\n",
+    "        positive_record.append({\n",
     "            'source': record['tibetan'],\n",
-    "            'target': token.lemma_,\n",
+    "            'target': lemma,\n",
     "            'pos': token.pos_,\n",
     "            'label': 1\n",
-    "        })"
+    "        })\n",
+    "    positive_records.append(positive_record)\n",
+    "\n",
+    "positive_examples = [ex for rec in positive_records for ex in rec]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "7ded7e33-1d97-4307-bf5e-0d2edef7f829",
    "metadata": {},
    "outputs": [],
@@ -391,19 +407,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "b4918d84-d90f-4588-9f9a-cb45c3ac3eb3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd03626d32d143f9a754027ca1b3fb6c",
+       "model_id": "6823eaecdc2e40ccadf831951f3cc40f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/20983 [00:00<?, ?it/s]"
+       "  0%|          | 0/24386 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -424,19 +440,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "bd67c248-2dc3-4f4b-9f0e-3bbb2d0e2569",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8aaf009006a14af886711500f09bd1dc",
+       "model_id": "5dad1003f42a4c0ea14f8df1c77fb3e8",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/20983 [00:00<?, ?it/s]"
+       "  0%|          | 0/3500 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -444,58 +460,39 @@
     }
    ],
    "source": [
-    "negative_examples = []\n",
+    "negative_records = []\n",
     "\n",
-    "for example in tqdm(positive_examples):\n",
-    "    blacked_out_targets = {example['target']}\n",
-    "    for _ in range(negative_ratio):\n",
-    "        example = copy.deepcopy(example)\n",
-    "        while True:\n",
-    "            target = random.choice(\n",
-    "                random.choice(\n",
-    "                    by_tag[example['pos']]\n",
-    "                )    # First choose a meaning\n",
-    "            )        #     ...then choose a synonym\n",
-    "            if not target in blacked_out_targets:\n",
-    "                break\n",
-    "        example['target'] = target\n",
-    "        example['label'] = 0\n",
-    "        blacked_out_targets.add(target)\n",
-    "        negative_examples.append(example)"
+    "for pos_record in tqdm(positive_records):\n",
+    "    neg_record = []\n",
+    "    for example in pos_record:\n",
+    "        blacked_out_targets = {example['target']}\n",
+    "        for _ in range(negative_ratio):\n",
+    "            example = copy.deepcopy(example)\n",
+    "            while True:\n",
+    "                target = random.choice(\n",
+    "                    random.choice(\n",
+    "                        by_tag[example['pos']]\n",
+    "                    )    # First choose a meaning\n",
+    "                )        #     ...then choose a synonym\n",
+    "                if not target in blacked_out_targets:\n",
+    "                    break\n",
+    "            example['target'] = target\n",
+    "            example['label'] = 0\n",
+    "            blacked_out_targets.add(target)\n",
+    "            neg_record.append(example)\n",
+    "    negative_records.append(neg_record)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "2d0bf9f9-4a26-4048-833f-3eea17a2177a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "83932"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "final_dataset = positive_examples + negative_examples\n",
-    "len(final_dataset)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "fd98907e-0297-4ec5-8514-05f7700a00aa",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/eeisenst/workspace/temp/temp_data/aligner_dataset.pkl'"
+       "'Positive part: 21971+2415 = 24386 = 24386'"
       ]
      },
      "execution_count": 14,
@@ -504,19 +501,74 @@
     }
    ],
    "source": [
-    "dataset_fn = os.path.join(os.environ['CAI_TEMP_PATH'], \"temp_data/aligner_dataset.pkl\")\n",
-    "dataset_fn"
+    "pos_train_size = int(len(positive_records) * (1 - validation_frac))\n",
+    "\n",
+    "pos_train_dataset = [ex for i in range(pos_train_size) for ex in positive_records[i]]\n",
+    "pos_val_dataset = [ex for i in range(pos_train_size, len(positive_records)) for ex in positive_records[i]]\n",
+    "f\"Positive part: {len(pos_train_dataset)}+{len(pos_val_dataset)} = {len(pos_train_dataset) + len(pos_val_dataset)} = {len(positive_examples)}\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "30d93bc9-fd23-454d-93cf-db3cb5cfe29a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Negative part: 65913+7245 = 73158 = 73158'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "neg_len = sum([1 for rec in negative_records for ex in rec])\n",
+    "neg_train_size = int(len(negative_records) * (1 - validation_frac))\n",
+    "\n",
+    "neg_train_dataset = [ex for i in range(neg_train_size) for ex in negative_records[i]]\n",
+    "neg_val_dataset = [ex for i in range(neg_train_size, len(negative_records)) for ex in negative_records[i]]\n",
+    "f\"Negative part: {len(neg_train_dataset)}+{len(neg_val_dataset)} = {len(neg_train_dataset) + len(neg_val_dataset)} = {neg_len}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "fd98907e-0297-4ec5-8514-05f7700a00aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/eeisenst/workspace/temp/temp_data/aligner_dataset'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset_fn = os.path.join(os.environ['CAI_TEMP_PATH'], \"temp_data/aligner_dataset\")\n",
+    "os.makedirs(dataset_fn, exist_ok=True)\n",
+    "dataset_fn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "14782c78-3581-4099-9c72-a55155877638",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(dataset_fn, 'wb') as f:\n",
-    "    pickle.dump(final_dataset, f)"
+    "train_dataset = pos_train_dataset + neg_train_dataset\n",
+    "val_dataset = pos_val_dataset + neg_val_dataset\n",
+    "\n",
+    "pd.DataFrame(train_dataset).to_csv(os.path.join(dataset_fn, \"train.csv\"))\n",
+    "pd.DataFrame(val_dataset).to_csv(os.path.join(dataset_fn, \"validation.csv\"))"
    ]
   }
  ],
